ops/k8s/deployment.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: hive-deployment
  namespace: hive
  labels:
    app: hive
spec:
  selector:
    matchLabels:
      app: hive
  updateStrategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: hive
    spec:
      containers:
        - name: hive
          image: {image}
          ports:
            - containerPort: 80
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: 80
              scheme: HTTP
            initialDelaySeconds: 20
            periodSeconds: 2
            successThreshold: 1
            timeoutSeconds: 2
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: 80
              scheme: HTTP
            initialDelaySeconds: 20
            periodSeconds: 2
            successThreshold: 2
            timeoutSeconds: 2
