ops/k8s/hive-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hive-deployment
  namespace: hive
  labels:
    app: hive
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hive
  template:
    metadata:
      labels:
        app: hive
    spec:
      imagePullSecrets:
        - name: sor-registry
      containers:
        - name: hive
          image: registry.sorijen.net.au/hive:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /game/RA5KTT7H0M80E/0
              port: 80
              scheme: HTTP
            initialDelaySeconds: 20
            periodSeconds: 2
            successThreshold: 1
            timeoutSeconds: 2
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /game/RA5KTT7H0M80E/0
              port: 80
              scheme: HTTP
            initialDelaySeconds: 20
            periodSeconds: 2
            successThreshold: 2
            timeoutSeconds: 2
