ops/k8s/test-results-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hive-test-results
  namespace: hive
  labels:
    app: hive-test-results
    buildId: "buildId"
spec:
  replicas: 1
  revisionHistoryLimit: 4
  selector:
    matchLabels:
      app: hive-test-results
  template:
    metadata:
      labels:
        app: hive-test-results
    spec:
      imagePullSecrets:
        - name: sor-registry
      containers:
        - name: hive-test-results
          image: registry.lab.sorijen.net.au/hive-test-results:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /backend/index.html
              port: 80
              scheme: HTTP
            initialDelaySeconds: 20
            periodSeconds: 200
            successThreshold: 1
            timeoutSeconds: 2
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /backend/index.html
              port: 80
              scheme: HTTP
            initialDelaySeconds: 20
            periodSeconds: 2
            successThreshold: 2
            timeoutSeconds: 2
