ops/k8s/hive-redis.yml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redis-cluster
spec:
  serviceName: redis-cluster
  replicas: 6
  selector:
    matchLabels:
      app: redis-cluster
  template:
    metadata:
      labels:
        app: redis-cluster
    spec:
      
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchLabels:
              app: redis-cluster
      containers:
      - name: redis
        image: redis:7.0.11
        ports:
        - containerPort: 6379
          name: client
        - containerPort: 16379
          name: gossip
        command: ["/conf/update-node.sh", "redis-server", "/conf/redis.conf"]
        volumeMounts:
        - name: conf
          mountPath: /conf
          readOnly: false
        - name: data
          mountPath: /data
          readOnly: false
        lifecycle:
          postStart:
            exec:
              command: ["/bin/sh","-c","echo ${REDIS_CLUSTER_SERVICE_HOST}  ${REDIS_CLUSTER_SERVICE_PORT_CLIENT} && sleep 1 && redis-cli cluster meet ${REDIS_CLUSTER_SERVICE_HOST}  ${REDIS_CLUSTER_SERVICE_PORT_CLIENT}"]
      volumes:
        - name: conf
          configMap:
            name: redis-cluster
            defaultMode: 0755

  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  name: redis-cluster
spec:
  type: ClusterIP
  ports:
  - port: 6379
    targetPort: 6379
    name: client
  - port: 16379
    targetPort: 16379
    name: gossip
  selector:
    app: redis-cluster
