ops/k8s/ingress.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: hive-service
  namespace: hive
spec:
  selector:
    app: hive
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  sessionAffinity: ClientIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/issuer: hive-issuer
  name: hive-ingress
  namespace: hive
spec:
  ingressClassName: nginx
  rules:
    - host: hive.sorijen.net.au
      http:
        paths:
          - backend:
              service:
                name: hive-service
                port:
                  number: 80
            path: /
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - hive.sorijen.net.au
      secretName: hive-cert-prod-tls
