ops/k8s/matomo.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: matomo
  name: matomo
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: matomo
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        io.kompose.service: matomo
    spec:
      containers:
        - image: mariadb
          name: matomo-db
          args:
            - --max-allowed-packet=64MB
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: matomo-db
        - image: matomo:fpm-alpine
          name: matomo-app
          ports:
            - containerPort: 9000
          volumeMounts:
            - mountPath: /var/www/html
              name: matomo
              readOnly: false
        - image: nginx:alpine
          name: matomo
          ports:
            - containerPort: 8080
          volumeMounts:
            - mountPath: /var/www/html
              name: matomo
              readOnly: false
            - mountPath: /etc/nginx/conf.d/
              name: matomo-conf
              readOnly: false
      restartPolicy: Always
      volumes:
        - name: matomo
          persistentVolumeClaim:
            claimName: matomo
        - name: matomo-conf
          configMap:
            name: matomo.conf
            defaultMode: 0755
        - name: matomo-db
          persistentVolumeClaim:
            claimName: matomo-db
---
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: matomo-web
  name: matomo-service
spec:
  type: NodePort
  ports:
    - name: matomo
      port: 80
      targetPort: 8080
  selector:
    io.kompose.service: matomo
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/issuer: hive-issuer
  name: matomo-ingress
spec:
  rules:
    - host: a.hive.sorijen.net.au
      http:
        paths:
          - backend:
              service:
                name: matomo-service
                port:
                  number: 80
            path: /
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - a.hive.sorijen.net.au
      secretName: matomo-cert-prod-tls
